--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Browse My Meditation Audiobook</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,18 +20,21 @@
     <form>
       <div class="form-group">
         <label for="track">Enter a Category:</label>
-        <input type="category" class="form-control" id="category" aria-describedby="categoryHelp" placeholder="Enter Category">
-        <small id="catHelp" class="form-text text-muted">Just search for whatever you're looking for</small>
+        <input type="category" class="form-control" id="category" aria-describedby="categoryHelp"
+          placeholder="Enter Category">
+        <small id="catHelp" class="form-text text-muted"></small>
       </div>
 
       </div>
       <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </form>
 
-    <div id="label"></div>
-    <div></div>
-    <div id="url"></div>
-        <script src="assets/javascript/audio.js"></script>
+    <td>
+      <div id="label"></div>
+      <div></div>
+      <div id="url"></div>
+    </td>
+    <script src="assets/javascript/audio.js"></script>
   </body>
 
 </html>
